# SeamLang

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
docs/: spec.ebnf
src/: main.cpp
src/ir/ast/: ast.h  ast.hpp  expression.cpp  expression.h  expression.hpp  node.h  node.hpp  statement.cpp  statement.h  statement.hpp  type.h  visitor.h  visitor.hpp
src/lexer/: lexeme.h  lexeme.hpp  lexer.cpp  lexer.h
src/parser/: parser.cpp  parser.h  parser.hpp
src/seam/ast/: statement.hpp
src/seam/ast/parser/: parser.cpp
src/seam/code_generation/: code_generation.cpp  code_generation.hpp
src/seam/ir/: code_generation.hpp
src/seam/ir/ast/: base_visitor.hpp  expression.cpp  expression.hpp  statement.cpp  statement.hpp  type.cpp  type.hpp  visitor.hpp
src/seam/lexer/: lexeme.hpp  lexer.cpp  lexer.hpp
src/seam/parser/: parser.cpp  parser.hpp
src/seam/parser/passes/: function_collector.cpp  function_collector.hpp  function_dependency.cpp  function_dependency.hpp  function_resolver.cpp  function_resolver.hpp  number_resolver.cpp  number_resolver.hpp  pass.cpp  pass.hpp  symbol_collector.hpp  symbol_resolver.hpp  type_collector.cpp  type_collector.hpp  type_resolver.cpp  type_resolver.hpp  types.cpp  types.hpp
src/seam/types/: function_signature.hpp  module.hpp  type.hpp
src/seam/utils/: exception.hpp
src/tests/: lexer_test_suite.cpp
src/utils/: error.cpp  error.h  error.hpp  exception.h  exception.hpp  position.h  position.hpp
